--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,10 @@ h1, h2, h3, h4, h5, h6 {
     width: 48px;
     min-width: 48px;
     max-width: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .social-navbar-mini a {
     color: #3B3B1A;
@@ -241,6 +245,10 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0.4rem 0;
     width: 100%;
     text-align: center;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .social-navbar-mini a:hover, .social-navbar-mini a:focus {
     color: #8A784E;
